--- a/notebooks/getting_started_report.ipynb
+++ b/notebooks/getting_started_report.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mIPython\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display, HTML\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -20,29 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File ../results_llm/lib_baseline.csv has no results\n",
-      "File ../results_llm/lib_similarity.csv has no results\n",
-      "File ../results_llm/vmc_similarity.csv has no results\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m html_content \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m<ul>\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m results_files:\n\u001b[0;32m---> 12\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(file)\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUrl\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(df) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<ul><li><a href=\"http://c10-10.sysnet.ucsd.edu:8866/?results=results_llm%2Fcedar_baseline.csv&assertions=DafnyGym%2Fcedar.csv&method=10\" target=\"_blank\">StrictGetLubRecordType cedar_baseline.csv</a></li><li><a href=\"http://c10-10.sysnet.ucsd.edu:8866/?results=results_llm%2Fcedar_similarity.csv&assertions=DafnyGym%2Fcedar.csv&method=10\" target=\"_blank\">StrictGetLubRecordType cedar_similarity.csv</a></li><li><a href=\"http://c10-10.sysnet.ucsd.edu:8866/?results=results_llm%2Fvmc_baseline.csv&assertions=DafnyGym%2Fvmc.csv&method=3\" target=\"_blank\">PosCountAddImpliesAdd vmc_baseline.csv</a></li></ul>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -59,92 +61,20 @@
     "for file in results_files:\n",
     "    df = pd.read_csv(file)\n",
     "    if \"Url\" in df.columns:\n",
-    "        if len(df) > 1:\n",
+    "        if len(df) > 0:\n",
     "            row = df.iloc[0]\n",
-    "            html_content += f'<li><a href=\"{row[\"Url\"]}\" target=\"_blank\">{f\"{row[\"Original Method\"]} {os.path.basename(file)}\"}</a></li>'\n",
+    "            html_content += f'<li><a href=\"{row[\"Url\"]}\" target=\"_blank\">{row[\"Original Method\"]} {os.path.basename(file)}</a></li>'\n",
     "        else:\n",
     "            print(f\"File {file} has no results\")\n",
     "html_content += \"</ul>\"\n",
     "\n",
     "display(HTML(html_content))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Index</th>\n",
-       "      <th>Original Method File</th>\n",
-       "      <th>Original Method</th>\n",
-       "      <th>Original Method Time</th>\n",
-       "      <th>Original Method Result</th>\n",
-       "      <th>Original Result File</th>\n",
-       "      <th>Original Error Message</th>\n",
-       "      <th>Original Error Message File</th>\n",
-       "      <th>New Method File</th>\n",
-       "      <th>New Method</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Prompt Length</th>\n",
-       "      <th>Prompt Index</th>\n",
-       "      <th>Prompt name</th>\n",
-       "      <th>Error message</th>\n",
-       "      <th>Feedback</th>\n",
-       "      <th>Try</th>\n",
-       "      <th>Number placeholders</th>\n",
-       "      <th>Placeholder position</th>\n",
-       "      <th>Diff</th>\n",
-       "      <th>Url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 26 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Index, Original Method File, Original Method, Original Method Time, Original Method Result, Original Result File, Original Error Message, Original Error Message File, New Method File, New Method, New Method Time, New Method Result, New Method Result File, New Method Error Message, New Method Error Message File, Prompt File, Prompt Length, Prompt Index, Prompt name, Error message, Feedback, Try, Number placeholders, Placeholder position, Diff, Url]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 26 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "laurel-goYXolMl-py3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
